# holdem-suite-parser

./: Cargo.toml  LICENSE  pyproject.toml
holdem_suite_parser/: __init__.py  holdem_suite_parser.pyi
samples/: 20230730_Corpus Christi 03_play_holdem_no-limit.txt  sample1.txt  sample2.txt  sample_cash_play_money.txt  sample_expresso_play_money.txt  tournament_summary.txt
src/: common.rs  lib.rs  parser.rs  summary_parser.rs
