[package]
name = "holdem-suite-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "holdem_suite_parser"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
nom = "7.1.3"
pyo3 = { version = "0.19.0", features = ["chrono"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
